# subconscious-hackathon

./: CLAUDE.md  DEPENDENCIES.md  Makefile  README.md  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  job_store.py  main.py  models.py  pipeline.py  routes.py
frontend/src/: App.css  App.tsx  index.css
